fix missing paren in anonymous authors

--- a/paper.tex
+++ b/paper.tex
@@ -119,7 +119,7 @@
 \title{\sys}
 
 \if \ANON 1
-  \author{Anonymous Submission \#XXX (\pageref{page:last pages}}
+  \author{Anonymous Submission \#XXX (\pageref{page:last pages})}
 \else
   \author{
     Foo\\
