Ensure gnuplot + tixkz wcrks

--- a/paper.tex
+++ b/paper.tex
@@ -18,6 +18,8 @@
 \usepackage{xspace}
 \usepackage{libertine}
 \usepackage{microtype}
+\usepackage{tikz}
+\usepackage{gnuplot-lua-tikz}
 
 \microtypecontext{spacing=nonfrench}
 
