add example figure

--- a/eval.tex
+++ b/eval.tex
@@ -1,2 +1,11 @@
 \section{Evaluation}%
 \label{sec:eval}
+
+\begin{figure}%
+\centering
+\input{figures/example.gnuplot.tex}%
+\caption{An example figure.}%
+\label{fig:example}%
+\end{figure}
+
+Look at \autoref{fig:example}.
